# short-cli

./: .gitignore  Cargo.toml  README.md
migrations/: 1_urls.sql  20241008111617_urls.sql  20241008111618_urls.sql
src/: main.rs
templates/: index.html.hbs
