[package]
name = "short-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
shuttle-rocket = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tokio = "1.26.0"
url = "2.5.2"
serde = { version = "1.0.210", features = ["derive"] }
nanoid = "0.4.0"

